# ATA

./: CMakeLists.txt
builddir/: makefile  makefile_windows
src/: CMakeLists.txt  CMakeLists.txt~  client.c  client.c~  main.c  server.c  server.c~  testCases.c  testCases.c~
src/builddir/: client  makefile  makefile~  server
src/client/: world.c
src/includes/: CMakeLists.txt  eventQue.c  eventQue.c~  graphics.c  graphics.c~  graphics.h  graphics.h~  libcalc.c  libcalc.c~  libcalc.h  libcalc.h~  linkedList.c  linkedList.h  main.c~  sdltest.c
src/includes/graphics/: CMakeLists.txt  CMakeLists.txt~  editor.c  editor.c~  editor.h  editor.h~  level.c  level.c~  level.h  load_font.c  load_font.c~  load_font.h  load_image.c  load_image.c~  load_image.h  menu.c  menu.c~  menu.h  player.c~  structure.c  structure.h  timer.c  world.c  world.c~  world.h  world.h~
src/includes/network/: CMakeLists.txt~  udp_protocol.c  udp_protocol.c~  udp_protocol.h  udp_protocol.h~
src/includes/player/: CMakeLists.txt  CMakeLists.txt~  ai.c  ai.c~  controller.c  controller.c~  controller.h  controller.h~
src/includes/world/: CMakeLists.txt  CMakeLists.txt~  structure.c~  structure.h~  world.c~  world.h~
src/textures/: editor_gui.xcf
